2010-02-01  Kent Tamura  <tkent@chromium.org>

Reviewed by Darin Adler.

        Fix a bug that Math.round() retunrs incorrect results for huge integers
        https://bugs.webkit.org/show_bug.cgi?id=34462

        * runtime/MathObject.cpp:
        (JSC::mathProtoFuncRound): Avoid "arg + 0.5".

2010-02-01  Kent Tamura  <tkent@chromium.org>

        Reviewed by Darin Adler.

        Fix a bug that Math.round() retunrs incorrect results for huge integers
        https://bugs.webkit.org/show_bug.cgi?id=34462

        * fast/js/math-expected.txt:
        * fast/js/script-tests/math.js: Add test cases for Math.round() for huge numbers.

Canonical link: https://commits.webkit.org/45541@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54197 268f45cc-cd09-0410-ab3c-d52691b4dbfc